log
Thu 28 Mar 2024 02:47:14 PM UTC: 
 list.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bcf071f
Thu 28 Mar 2024 02:48:15 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
f1b977d
Thu 28 Mar 2024 02:49:32 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  9|3
total_score: 35/70
7471164
